--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
   "dependencies": {
     "@auth/core": "^0.34.2",
     "@auth/prisma-adapter": "^2.10.0",
-    "@prisma/client": "^6.11.1",
+    "@prisma/client": "6.12.0",
     "bcryptjs": "^3.0.2",
     "next": "15.4.1",
     "next-auth": "^4.24.11",
-    "prisma": "^6.11.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -30,6 +29,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
     "postcss": "^8.5.6",
+    "prisma": "6.12.0",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
   },
